--- a/src/main/resources/templates/applyResign.html
+++ b/src/main/resources/templates/applyResign.html
@@ -46,15 +46,35 @@
             color: red;
         }
 
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+        }
+
         body {
             font-family: Arial, sans-serif;
             background-color: lightseagreen;
-            margin: 0;
-            padding: 0;
         }
 
-        h1 {
-            color: #333;
+        main {
+            flex-grow: 1; /* This allows the main content to grow and push the footer down */
+        }
+
+        h2 {
+            color: green;
+            font-weight:bold;
+            text-align: center;
+            margin: 0;
+            margin-top: 3.5%;
+            margin-bottom: 10px;
+            padding: 0;
+            font-size: 30px;
+        }
+        u {
+            color: darkgreen;
         }
 
         form {
@@ -197,7 +217,12 @@
     </style>
 </head>
 <body>
-<h1 align="center">Resign Form</h1>
+
+<!-- Include Header -->
+<th:block th:replace="fragments/header"></th:block>
+
+<main>
+<u><h2 align="center">Resign Form</h2></u>
 <form th:action="@{/applyResign/{id}(id=${empId})}" method="post" class="custom-border">
     <div class="form-container">
         <div class="form-group">
@@ -271,6 +296,9 @@
         }
     });
 </script>
+</main>
+<!-- Include Footer -->
+<th:block th:replace="fragments/footer"></th:block>
 
 </body>
 </html>
