--- a/src/main/resources/templates/hrWelcome.html
+++ b/src/main/resources/templates/hrWelcome.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Welcome HR</title>
     <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+        }
+
         body {
             background-color: lightseagreen;
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
+        }
+
+        /* Wrapper to push footer to the bottom */
+        .wrapper {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
         }
 
         .container {
-            width: 40%;
-            margin: 100px auto;
+            width: 50%;
+            margin: auto;
             padding: 20px;
             background-color: white;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -21,30 +34,21 @@
             text-align: center;
         }
 
-        h1 {
+        h2 {
             text-decoration-color: #4CAF50;
-            color: lightseagreen;
+            color: green;
             margin-bottom: 50px;
+            font-size: 35px;
         }
 
-        h2 {
+        u {
+            color: darkgreen;
+        }
+
+        h3 {
             color: lightseagreen;
             margin-top: 0;
-        }
-
-        a {
-            display: inline-block;
-            margin: 10px 0;
-            padding: 10px 20px;
-            color: white;
-            background-color: #4CAF50;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        a:hover {
-            background-color: #45a049;
+            font-size: 30px;
         }
 
         .btn {
@@ -71,12 +75,22 @@
     </style>
 </head>
 <body>
-<div class="container">
-    <h1>HR Welcome Page</h1>
-    <h2>
-        <a href="/hrHome" class="btn">DashBoard</a> <br><br>
-    </h2>
+<!-- Wrapper to contain the content and push the footer down -->
+<div class="wrapper">
+
+    <!-- Include Header -->
+    <th:block th:replace="fragments/header"></th:block>
+
+    <div class="container">
+        <u><h2>HR Welcome Page</h2></u>
+        <h3>
+            <a href="/hrHome" class="btn">DashBoard</a> <br><br>
+        </h3>
+    </div>
 </div>
+
+<!-- Include Footer -->
+<th:block th:replace="fragments/footer"></th:block>
 
 </body>
 </html>
