--- a/src/main/resources/templates/resignStatus.html
+++ b/src/main/resources/templates/resignStatus.html
@@ -4,26 +4,34 @@
     <title>resign status</title>
     <style>
 
-        body {
-            background-color: lightseagreen;
-            font-family: Arial, sans-serif;
+        html, body {
+            height: 100%;
             margin: 0;
             padding: 0;
-            padding-top: 60px; /* To prevent content from being hidden under fixed header */
+            display: flex;
+            flex-direction: column;
         }
 
-        h1 {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
+        body {
+            font-family: Arial, sans-serif;
             background-color: lightseagreen;
-            color: #333;
+        }
+
+        main {
+            flex-grow: 1; /* This allows the main content to grow and push the footer down */
+        }
+
+        h2 {
+            color: green;
+            font-weight:bold;
             text-align: center;
             margin: 0;
-            padding: 15px 0;
-            z-index: 1000; /* Ensure it is above other content */
-            font-size: 24px;
+            margin-top: 3.5%;
+            padding: 0;
+            font-size: 30px;
+        }
+        u {
+            color: darkgreen;
         }
 
         table {
@@ -41,7 +49,7 @@
         }
 
         th {
-            background-color: #f2f2f2;
+            background-color: orange;
         }
 
         tr:nth-child(even) {
@@ -150,8 +158,12 @@
     </style>
 </head>
 <body>
-<h1>View your resign request status</h1>
 
+<!-- Include Header -->
+<th:block th:replace="fragments/header"></th:block>
+
+<main>
+<u><h2>Resign Requests Status</h2></u>
 <table border="1">
     <thead>
     <tr>
@@ -185,6 +197,9 @@
 </div>
 
 <br><br>
+</main>
+<!-- Include Footer -->
+<th:block th:replace="fragments/footer"></th:block>
 
 </body>
 </html>
