--- a/src/main/resources/templates/viewSelfDetails.html
+++ b/src/main/resources/templates/viewSelfDetails.html
@@ -6,22 +6,39 @@
 
         /* styles.css */
 
-        body {
-            background-color: lightseagreen;
-            font-family: Arial, sans-serif;
+        html, body {
+            height: 100%;
             margin: 0;
             padding: 0;
+            display: flex;
+            flex-direction: column;
         }
 
-        h1 {
+        body {
+            font-family: Arial, sans-serif;
+            background-color: lightseagreen;
+        }
+
+        main {
+            flex-grow: 1; /* This allows the main content to grow and push the footer down */
+        }
+
+        h2 {
+            color: green;
+            font-weight:bold;
             text-align: center;
-            margin-top: 50px;
-            color: #333;
+            margin: 0;
+            margin-top: 3.5%;
+            padding: 0;
+            font-size: 30px;
+        }
+        u {
+            color: darkgreen;
         }
 
         table {
             width: 80%;
-            margin: 20px auto;
+            margin: 20px 30px 20px 10px;
             border-collapse: collapse;
             background: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -34,7 +51,7 @@
         }
 
         th {
-            background-color: #f2f2f2;
+            background-color: orange;
         }
 
         tr:nth-child(even) {
@@ -133,7 +150,12 @@
 
 </head>
 <body>
-<h1>Detailed Information</h1>
+
+<!-- Include Header -->
+<th:block th:replace="fragments/header"></th:block>
+
+<main>
+    <u><h2>Detailed Information</h2></u>
 <table border="1">
     <thead>
     <tr>
@@ -190,8 +212,13 @@
     </tr>
     </tbody>
 </table>
-<div class="form-group" style="width: 100%; text-align:center; position: fixed">
+<div class="form-group" style="width: 100%; text-align:center;">
     <a th:href="@{/empHome(empId=${employee.empId})}" class="button-link">Back to Home Page</a>
+</div>
+</main>
+
+<div style="position: fixed; width: 100%; bottom:0;">
+    <th:block th:replace="fragments/footer"></th:block>
 </div>
 
 </body>
