--- a/src/main/resources/templates/empHome.html
+++ b/src/main/resources/templates/empHome.html
@@ -94,6 +94,8 @@
 
         .btn-logout:hover {
             background-color: #d32f2f; /* Darker red on hover */
+            transform: rotate(360deg);
+            transition: all 0.5s ease-in;
         }
 
     </style>
