--- a/src/main/resources/templates/hrHome.html
+++ b/src/main/resources/templates/hrHome.html
@@ -91,6 +91,8 @@
 
          .btn-logout:hover {
              background-color: #d32f2f; /* Darker red on hover */
+             transform: rotate(360deg);
+             transition: all 0.5s ease-in;
          }
 
         /* Modal styles */
